<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Seller</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dash_board">Dashboard</string>
    <string name="title_activity_update_offer">Update Offers</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="offer_valid_from">Valid From</string>
    <string name="select_date">Select Date</string>
    <string name="offer_start_date_label">Offer Start Date</string>
    <string name="offer_end_date_label">Offer End Date</string>
    <string name="offer_validity_time_label">Offer validity Time</string>
    <string name="product_description">Product description</string>
    <string name="product_name">Product name</string>
    <string name="title_activity_create_offer">Create New Offer</string>
    <string name="offer_start_time">Offer Start Time</string>
    <string name="offer_end_time">Offer End Time</string>
    <string name="title_activity_seller_profile">Profile</string>
    <string name="menu_dash_board">DashBoard</string>
    <string name="menu_seller_profile">Profile</string>
    <string name="shop_name_label">Shop Name  </string>
    <string name="shop_name">Royal Hotels</string>
    <string name="owner_name_label">Owner Name  </string>
    <string name="owner_name">Somesh Shrivastava</string>
    <string name="working_days_label">Working Days : </string>
    <string name="working_days">Everday</string>
    <string name="working_hours">9 AM to 6PM</string>
    <string name="working_hours_label">Working Hours : </string>
    <string name="shop_phone_number_label">Shop Number : </string>
    <string name="shop_phone_number">9008427676</string>
    <string name="shop_address_label">Address : </string>
    <string name="shop_address">15, 1st Main Road Royal Placid, Harlur road, Belendur, Bangalore 560102</string>
    <string name="offer_valid_till">Valid Till</string>
    <string name="title_activity_seller_registration">Sign Up</string>
    <string name="contact_number">Contact Number</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="conform_password">Re-Enter Password</string>
    <string name="next_button_text">Next</string>
    <string name="first_name_label">Your First Name</string>
    <string name="last_name_label">Your last name</string>
    <string name="previous_button_text">Back</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="area">Area</string>
    <string name="City">City</string>
    <string name="pinCode">PinCode</string>
    <string name="state">State</string>
    <string name="shopAddressTitle">Shop Address</string>
    <string name="shopInfoTitle">Shop Information</string>
    <string name="SignUpTitle">Sign Up</string>
    <string name="title_activity_location">Your Location</string>
    <string name="latlang">LatLang</string>
    <string name="skip_this_step">Skip This Step</string>
    <string name="no_location_found">Problem in finding Location. Press Skip to try it later.</string>
    <string name="register_button_text">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="login_button_text">Login</string>
    <string name="title_activity_login_or_register_selection">Login or Register</string>
    <string name="default_dialog_alert_heading_text">Message</string>
    <string name="default_dialog_content_text">\"\"</string>
    <string name="OKButton">Ok</string>
    <string name="CancelButton">Cancle</string>
    <string name="yes_button_text">Yes</string>
    <string name="no_button_text">No</string>
    <string name="registration_leave_confirm_message">Do you really want to leave the Registration step?</string>
    <string name="login_leave_confirm_message">Do you want to leave login page?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_no_internet_connection">NoInternetConnectionActivity</string>
    <string name="ApplicationProgressBarTitle">Please Wait...</string>
    <string name="checkingInterneteConnection">Checking Internet connection</string>
    <string name="shop_opening_time">Shop Opens At</string>
    <string name="shop_closing_time">Shop Closes At</string>
    <string name="shop_closing_days">cloasing days</string>
    <string name="userInfoTitle">Seller Detail</string>
    <string name="WeekDaysDialogTitle">Select shop closing days</string>
    <string name="shop_timing">Shop Timing</string>
    <string name="register_fragment_title">Step %1$s of %2$s</string>
</resources>
