<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <EditText
            android:layout_marginTop="@dimen/form_element_padding"
            android:id="@+id/shop_name"
            android:layout_width="match_parent"
            android:inputType="textCapWords|textNoSuggestions"
            android:layout_height="@dimen/form_text_default_height"
            android:editable="true"
            android:focusable="true"
            android:hint="@string/shop_name_label"
            style="@style/default_form_edit_text"
            android:background="@drawable/default_form_text_selector"
            />
        <EditText
            android:layout_marginTop="@dimen/form_element_padding"
            android:id="@+id/owner_first_name"
            android:layout_width="match_parent"
            android:inputType="textCapWords|textNoSuggestions"
            android:layout_height="@dimen/form_text_default_height"
            android:editable="true"
            android:focusable="true"
            android:hint="@string/first_name_label"
            style="@style/default_form_edit_text"
            android:background="@drawable/default_form_text_selector"
            />

        <EditText
            android:layout_marginTop="@dimen/form_element_padding"
            android:id="@+id/owner_last_name"
            android:layout_width="match_parent"
            android:inputType="textCapWords|textNoSuggestions"
            android:layout_height="@dimen/form_text_default_height"
            android:editable="true"
            android:focusable="true"
            android:hint="@string/last_name_label"
            style="@style/default_form_edit_text"
            android:background="@drawable/default_form_text_selector"
            />
        <Button
            android:id="@+id/next_button"
            android:layout_marginTop="@dimen/form_button_padding_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_button_text"
            style="@style/default_button_style"
            android:textSize="20sp"
            android:background="@drawable/default_save_button_style_selector"
            />
        <Button
            android:id="@+id/previous_button"
            android:layout_marginTop="@dimen/form_button_padding_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/previous_button_text"
            style="@style/default_button_style"
            android:textSize="20sp"
            android:background="@drawable/default_save_button_style_selector"
            />
    </LinearLayout>
</LinearLayout>