<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">
        <EditText
                android:layout_marginTop="@dimen/form_element_padding"
                android:id="@+id/address_line_1"
                android:layout_width="match_parent"
                android:inputType="textCapWords|textNoSuggestions"
                android:layout_height="@dimen/form_text_default_height"
                android:editable="true"
                android:focusable="true"
                android:hint="@string/address_line_1"
                style="@style/default_form_edit_text"
                android:background="@drawable/default_form_text_selector"
                />
        <EditText
                android:layout_marginTop="@dimen/form_element_padding"
                android:id="@+id/address_line_2"
                android:layout_width="match_parent"
                android:inputType="textCapWords|textNoSuggestions"
                android:layout_height="@dimen/form_text_default_height"
                android:editable="true"
                android:focusable="true"
                android:hint="@string/address_line_2"
                style="@style/default_form_edit_text"
                android:background="@drawable/default_form_text_selector"
                />
        <EditText
                android:layout_marginTop="@dimen/form_element_padding"
                android:id="@+id/area"
                android:layout_width="match_parent"
                android:inputType="textCapWords|textNoSuggestions"
                android:layout_height="@dimen/form_text_default_height"
                android:editable="true"
                android:focusable="true"
                android:hint="@string/area"
                style="@style/default_form_edit_text"
                android:background="@drawable/default_form_text_selector"
                />
        <EditText
                android:layout_marginTop="@dimen/form_element_padding"
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:inputType="textCapWords|textNoSuggestions"
                android:layout_height="@dimen/form_text_default_height"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/state"
                style="@style/default_form_edit_text"
                android:background="@drawable/default_form_text_selector"
                />
        <EditText
                android:layout_marginTop="@dimen/form_element_padding"
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:inputType="textCapWords|textNoSuggestions"
                android:layout_height="@dimen/form_text_default_height"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/City"
                style="@style/default_form_edit_text"
                android:background="@drawable/default_form_text_selector"
                />
        <EditText
                android:layout_marginTop="@dimen/form_element_padding"
                android:id="@+id/pincode"
                android:layout_width="match_parent"
                android:inputType="number|textNoSuggestions"
                android:maxLength="6"
                android:layout_height="@dimen/form_text_default_height"
                android:editable="true"
                android:focusable="true"
                android:hint="@string/pinCode"
                style="@style/default_form_edit_text"
                android:background="@drawable/default_form_text_selector"
                />
        <Button
                android:id="@+id/save_Button"
                android:layout_marginTop="@dimen/form_button_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_button_text"
                style="@style/default_button_style"
                android:textSize="20sp"
                android:background="@drawable/default_save_button_style_selector"
                />
        <Button
                android:id="@+id/previous_button"
                android:layout_marginTop="@dimen/form_button_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/previous_button_text"
                style="@style/default_button_style"
                android:textSize="20sp"
                android:background="@drawable/default_save_button_style_selector"
                />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:gravity="bottom">
            <TextView
                    android:visibility="gone"
                    android:id="@+id/fragment4_error_message"
                    style="@style/defaultErrorMessageTextView"
                    android:text=""
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
        </LinearLayout>
     </LinearLayout>
</RelativeLayout>