<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >
    <EditText
        android:layout_marginTop="@dimen/form_element_padding"
        android:id="@+id/contact_number"
        android:layout_width="match_parent"
        android:inputType="phone"
        android:layout_height="@dimen/form_text_default_height"
        android:editable="true"
        android:focusable="true"
        android:hint="@string/contact_number"
        style="@style/default_form_edit_text"
        android:background="@drawable/default_form_text_selector"
        />

        <EditText
            android:layout_marginTop="@dimen/form_element_padding"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_text_default_height"
            android:editable="true"
            android:focusable="true"
            android:hint="@string/email_address"
            style="@style/default_form_edit_text"
            android:background="@drawable/default_form_text_selector"
            />
        <EditText
            android:layout_marginTop="@dimen/form_element_padding"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_text_default_height"
            android:editable="true"
            android:focusable="true"
            android:hint="@string/password"
            style="@style/default_form_edit_text"
            android:background="@drawable/default_form_text_selector"
            />
        <EditText
            android:layout_marginTop="@dimen/form_element_padding"
            android:id="@+id/conform_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_text_default_height"
            android:editable="true"
            android:focusable="true"
            android:hint="@string/conform_password"
            style="@style/default_form_edit_text"
            android:background="@drawable/default_form_text_selector"
            />

        <Button
            android:id="@+id/next_button"
            android:layout_marginTop="@dimen/form_button_padding_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_button_text"
            style="@style/default_button_style"
            android:textSize="20sp"
            android:background="@drawable/default_save_button_style_selector"
            />
        <Button
            android:id="@+id/previous_button"
            android:layout_marginTop="@dimen/form_button_padding_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/previous_button_text"
            style="@style/default_button_style"
            android:textSize="20sp"
            android:background="@drawable/default_save_button_style_selector"
            />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:gravity="bottom">
            <TextView
                    android:visibility="gone"
                    android:id="@+id/fragment1_error_message"
                    style="@style/defaultErrorMessageTextView"
                    android:text=""
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>



</RelativeLayout>