<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.somworld.seller_ui.views.UpdateOffer">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/update_offer_product"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_text_default_height"
            android:hint="@string/product_name"
            android:fontFamily="verdana"
            style="@style/default_form_edit_text"
            android:background="@drawable/default_form_text_selector"/>
        <EditText
            android:layout_marginTop="@dimen/form_element_padding"
            android:id="@+id/update_offer_description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_text_area_default_height"
            android:hint="@string/product_description"
            android:gravity="start|top"
            android:fontFamily="verdana"
            style="@style/default_form_edit_text"
            android:background="@drawable/default_form_text_selector"
            />

        <EditText
            android:layout_marginTop="@dimen/form_element_padding"
            android:id="@+id/update_offer_Start_time"
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_text_default_height"
            style="@style/default_form_edit_text"
            android:focusable="false"
            android:background="@drawable/default_form_text_selector"
            />

        <EditText
            android:layout_marginTop="@dimen/form_element_padding"
            android:id="@+id/update_offer_End_time"
            android:layout_width="match_parent"
            android:editable="false"
            android:focusable="false"
            android:layout_height="@dimen/form_text_default_height"
            style="@style/default_form_edit_text"
            android:background="@drawable/default_form_text_selector"
            />
        <Button
            android:id="@+id/update_offer_button"
            android:layout_marginTop="@dimen/form_element_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button_text"
            style="@style/default_button_style"
            android:textSize="20sp"
            android:background="@drawable/default_save_button_style_selector"
            />

        <Button
            android:id="@+id/cancel_update_offer_button"
            android:layout_marginTop="@dimen/form_element_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_text"
            style="@style/default_button_style"
            android:textSize="20sp"
            android:background="@drawable/default_cancel_button_style_selector"
            />
        </LinearLayout>

</RelativeLayout>
